{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 26,
  "lineage": "f797a967-2392-262a-e617-751e71a66194",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194425072870:vpc/vpc-22abf447",
            "cidr_block": "10.45.0.0/21",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-c07f9ea9",
                "cidr_block": "10.45.0.0/21",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-af5140cd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-22abf447",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-de92a7bb",
            "owner_id": "194425072870",
            "state": "available",
            "tags": {
              "Name": "Orion Main",
              "kubernetes.io/cluster/eks-orion-tf": "shared",
              "kubernetes.io/cluster/eks-prod": "shared",
              "kubernetes.io/cluster/eks-staging": "shared",
              "kubernetes.io/cluster/orion-staging": "shared"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "orion-ptt-system",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007e8beb808004fdc",
            "arn": "arn:aws:ec2:us-east-1:194425072870:instance/i-020f648dbeea79e63",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-020f648dbeea79e63",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "Nik",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05a670295c490e37f",
            "private_dns": "ip-10-45-0-207.ec2.internal",
            "private_ip": "10.45.0.207",
            "public_dns": "ec2-34-201-104-248.compute-1.amazonaws.com",
            "public_ip": "34.201.104.248",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "volume_id": "vol-0237728d5d5023851",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bf761ec8",
            "tags": {
              "Name": "tarfu-orion-ptt-system"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f515b8f39c7d9792"
            ]
          },
          "dependencies": [
            "aws_security_group.orion-ptt-system-k8s-node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "orion-ptt-system-k8s-node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194425072870:security-group/sg-0f515b8f39c7d9792",
            "description": "Allow traffic to Kubernetes",
            "egress": [],
            "id": "sg-0f515b8f39c7d9792",
            "ingress": [],
            "name": "tarfu-orion-ptt-system K8s Node",
            "name_prefix": null,
            "owner_id": "194425072870",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-22abf447"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "k8s-http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "tarfu Inbound Cleartext Application Traffic",
            "from_port": 80,
            "id": "sgrule-764839962",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f515b8f39c7d9792",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.orion-ptt-system-k8s-node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "k8s-https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Inbound Secure Application Traffic",
            "from_port": 443,
            "id": "sgrule-4117610157",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f515b8f39c7d9792",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.orion-ptt-system-k8s-node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "k8s-kotsadm",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Inbound Secure Application Traffic",
            "from_port": 8800,
            "id": "sgrule-1360004668",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f515b8f39c7d9792",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8800,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.orion-ptt-system-k8s-node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "k8s-node-outbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "outbound traffic",
            "from_port": 0,
            "id": "sgrule-443649794",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f515b8f39c7d9792",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.orion-ptt-system-k8s-node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Intra cluster traffic",
            "from_port": 22,
            "id": "sgrule-2602358191",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f515b8f39c7d9792",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.orion-ptt-system-k8s-node"
          ]
        }
      ]
    }
  ]
}